# Jumpy-Thieves

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  wasm.recipe.py
assets/shaders/: sprite.frag.glsl  sprite.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake  compiler.cmake
src/: CMakeLists.txt  main.cpp  web_main.cpp
src/common/: CMakeLists.txt  app.cpp  app.hpp  constants.hpp  file_util.hpp  game.cpp  game.hpp  opengl.hpp  rect.hpp  shader.cpp  shader.hpp  sprite_renderer.cpp  sprite_renderer.hpp  texture.cpp  texture.hpp  tile_map.cpp  tile_map.hpp
test/: CMakeLists.txt
www/: index.html
